--- a/pkg/authn/service/AuthnService.go.org
+++ b/pkg/authn/service/AuthnService.go.org
@@ -1,57 +1,32 @@
-// Package authservice to serve a REST api for authentication and token refresh
-package authservice
+package service
 
 import (
 	"crypto/ecdsa"
 	"crypto/tls"
 	"crypto/x509"
 	"fmt"
-	"io/ioutil"
 	"net/http"
 
-	"github.com/wostzone/wost-go/pkg/tlsserver"
-
-	"github.com/gorilla/mux"
 	"github.com/sirupsen/logrus"
 
-	"github.com/wostzone/hub/authn/pkg/clientconfigstore"
-	"github.com/wostzone/hub/authn/pkg/jwtissuer"
-	"github.com/wostzone/hub/authn/pkg/unpwauth"
-	"github.com/wostzone/hub/authn/pkg/unpwstore"
-	"github.com/wostzone/wost-go/pkg/tlsclient"
+	"github.com/hiveot/hub.go/pkg/tlsclient"
+	"github.com/hiveot/hub.go/pkg/tlsserver"
+	"github.com/hiveot/hub/pkg/authn/service/jwtissuer"
+	"github.com/hiveot/hub/pkg/authn/service/unpwauth"
+	"github.com/hiveot/hub/pkg/authn/service/unpwstore"
 )
-
-// PluginID of the service
-const PluginID = "authservice"
-
-// DefaultAuthServicePort to connect to the authn service
-const DefaultAuthServicePort = 8881
-
-// DefaultAccessTokenValiditySec with access token validity in seconds
-const DefaultAccessTokenValiditySec = 3600
-
-// DefaultRefreshTokenValiditySec with Refresh token validity before refresh
-const DefaultRefreshTokenValiditySec = 1209600
 
 // internal constant for appID route parameter
 const appIDParam = "appid"
 
 // AuthServiceConfig contains the service configuration
 type AuthServiceConfig struct {
-	// Override of the server address from hub.yaml
-	Address string `yaml:"address"`
-
-	// Service listening port or 0 to use the default port 8881
-	Port uint `yaml:"port"`
-
-	// ClientID to identify this service as. Default is the pluginID
-	ClientID string `yaml:"clientID"`
-
-	// Enable the configuration store for authenticated users. Default is true
-	ConfigStoreEnabled bool `yaml:"configStoreEnabled"`
-
-	// Set the client config store folder. Default is 'clientconfig' in the config folder
-	ConfigStoreFolder string `yaml:"configStoreFolder"`
+	//
+	//// Enable the configuration store for authenticated users. Default is true
+	//ConfigStoreEnabled bool `yaml:"configStoreEnabled"`
+	//
+	//// Set the client config store folder. Default is 'clientconfig' in the config folder
+	//ConfigStoreFolder string `yaml:"configStoreFolder"`
 
 	// PasswordFile to read from. Use "" for default defined in 'unpwstore.DefaultPasswordFile'
 	PasswordFile string `yaml:"passwordFile"`
@@ -69,10 +44,10 @@ type AuthServiceConfig struct {
 //  3. Handle config requests to persist client configuration
 //
 type AuthService struct {
-	config        AuthServiceConfig
-	configStore   *clientconfigstore.ClientConfigStore
-	running       bool
-	tlsServer     *tlsserver.TLSServer
+	config AuthServiceConfig
+	//configStore   *clientconfigstore.ClientConfigStore
+	running bool
+	//tlsServer     *tlsserver.TLSServer
 	signingKey    *ecdsa.PrivateKey
 	authenticator *unpwauth.UnpwAuthenticator
 	jwtIssuer     *jwtissuer.JWTIssuer
@@ -81,16 +56,16 @@ type AuthService struct {
 // EnableConfigStore listens for configuration store requests.
 // URL is PUT/GET {server}/authn/config/{appID}
 //  storeFolder Folder to store user configuration files
-func (srv *AuthService) EnableConfigStore(storeFolder string) {
-	srv.configStore = clientconfigstore.NewClientConfigStore(storeFolder)
-	err := srv.configStore.Open()
-	if err != nil {
-		logrus.Errorf("Failed opening user configuration store: %s", err)
-		return
-	}
-
-	srv.tlsServer.AddHandler(tlsclient.DefaultJWTConfigPath+"/{"+appIDParam+"}", srv.ServeConfig)
-}
+//func (srv *AuthService) EnableConfigStore(storeFolder string) {
+//	srv.configStore = clientconfigstore.NewClientConfigStore(storeFolder)
+//	err := srv.configStore.Open()
+//	if err != nil {
+//		logrus.Errorf("Failed opening user configuration store: %s", err)
+//		return
+//	}
+//
+//	srv.tlsServer.AddHandler(tlsclient.DefaultJWTConfigPath+"/{"+appIDParam+"}", srv.ServeConfig)
+//}
 
 // EnableJwtIssuer enables JWT token issuer using asymmetric keys
 // Token are issued using the PUT /login request with payload carrying {username: , password:}
@@ -124,32 +99,32 @@ func (srv *AuthService) EnableJwtIssuer(issuerKey *ecdsa.PrivateKey,
 }
 
 // ServeConfig serves or updates user configuration [GET/PUT]
-func (srv *AuthService) ServeConfig(userID string, resp http.ResponseWriter, req *http.Request) {
-	logrus.Infof("AuthService.ServeConfig: userID=%s", userID)
-	appID := mux.Vars(req)[appIDParam]
-	if req.Method == http.MethodPut {
-		logrus.Warningf("ServeConfig, updated configuration for user '%s'", userID)
-		payload, err := ioutil.ReadAll(req.Body)
-		if err != nil {
-			srv.tlsServer.WriteBadRequest(resp, "Missing payload")
-			return
-		}
-		_ = srv.configStore.Put(userID, appID, string(payload))
-	} else if req.Method == http.MethodGet {
-		payload := srv.configStore.Get(userID, appID)
-		_, _ = resp.Write([]byte(payload))
-		return
-	} else {
-		logrus.Warningf("ServeConfig, method %s not support for user %s", req.Method, userID)
-		srv.tlsServer.WriteBadRequest(resp, "Bad method "+req.Method)
-		return
-	}
-}
+//func (srv *AuthService) ServeConfig(userID string, resp http.ResponseWriter, req *http.Request) {
+//	logrus.Infof("AuthService.ServeConfig: userID=%s", userID)
+//	appID := mux.Vars(req)[appIDParam]
+//	if req.Method == http.MethodPut {
+//		logrus.Warningf("ServeConfig, updated configuration for user '%s'", userID)
+//		payload, err := ioutil.ReadAll(req.Body)
+//		if err != nil {
+//			srv.tlsServer.WriteBadRequest(resp, "Missing payload")
+//			return
+//		}
+//		_ = srv.configStore.Put(userID, appID, string(payload))
+//	} else if req.Method == http.MethodGet {
+//		payload := srv.configStore.Get(userID, appID)
+//		_, _ = resp.Write([]byte(payload))
+//		return
+//	} else {
+//		logrus.Warningf("ServeConfig, method %s not support for user %s", req.Method, userID)
+//		srv.tlsServer.WriteBadRequest(resp, "Bad method "+req.Method)
+//		return
+//	}
+//}
 
 // SetPassword for updating a user's password
-func (srv *AuthService) SetPassword(userID, password string) error {
-	return srv.authenticator.SetPassword(userID, password)
-}
+//func (srv *AuthService) SetPassword(userID, password string) error {
+//	return srv.authenticator.SetPassword(userID, password)
+//}
 
 // Start listening for login and refresh requests
 func (srv *AuthService) Start() error {
